samples/_failures_safe/1761250311_ea0444_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e78fc3a6.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_e78fc3a6.c:170:9: error: expected declaration or statement at end of input
  170 |         }
      |         ^
./samples/SAFE/__tmp_e78fc3a6.c:170:9: error: expected declaration or statement at end of input
